--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "license": "MIT",
   "author": "Matthew Bauman",
   "type": "module",
-  "main": "index.js",
+  "main": "src/ucws-button.js",
   "dependencies": {
     "lit": "^3.1.4"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "rollup": "^4.24.0"
   }
 }
-
